tests/neg/i9115/B.scala
class B extends A {
  override val foo: String = "B" // error
}
